--- a/Makefile.math
+++ b/Makefile.math
@@ -3,3 +3,5 @@ PROJECT_WWW=https://github.com/apache/commons-math/archive/$(PROJECT_TAR)
 PROJECT_DIR=build/commons-math-MATH_3_6_RC2/
 PKG_NAME=org.apache.commons.math3
 JAR_NAME=commons-math3-3.6.jar
+
+TEST_PATH=$(PROJECT_DIR)src/test/
